--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,7 +5,7 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: rck_acc_mgr_development
+      database: rck_prod_man_development
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -126,7 +126,7 @@ development:
 test:
   clients:
     default:
-      database: rck_acc_mgr_test
+      database: rck_prod_man_test
       hosts:
         - localhost:27017
       options:
